--- a/app/src/Componets/btns.scss
+++ b/app/src/Componets/btns.scss
@@ -1,10 +1,11 @@
-.btns{
+.btns {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
     grid-gap: 7px;
+    justify-items: center;
 }
-.btn{
+.btn {
     display: grid;
     align-items: center;
     width: 60px;
@@ -12,6 +13,28 @@
     background: #333;
     color: #fff;
     text-align: center;
-    border-radius:50%;
+    border-radius: 50%;
+    font-size: 22px;
+    font-weight: 600;
+    
+}
+.btn.bg-grey {
+    background-color: #a6a6a6;
+    color: #000;
+}
+.btn.bg-orange {
+    background-color: #ff9501;
+}
 
+.btn.zero {
+    width: 100%;
+    border-radius: 34px;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+.btn:hover {
+    filter: brightness(130%);
+}
+.btn:active {
+    filter: brightness(80%);
 }
