ended_styling_of_calculator_25.07.2022

--- a/app/src/Componets/calcScreen.scss
+++ b/app/src/Componets/calcScreen.scss
@@ -3,4 +3,8 @@
     padding:10px;
     display: grid;
     justify-items: end;
+    align-items: end;
+    font-size: 4rem;
+    color: #fff;
+    font-weight: 400;
 }
