--- a/app/src/Componets/calcScreen.scss
+++ b/app/src/Componets/calcScreen.scss
@@ -1,10 +1,19 @@
 .calc-screen{
     height: 125px;
-    padding:10px;
+    padding: 10px;
     display: grid;
     justify-items: end;
     align-items: end;
-    font-size: 4rem;
+    font-size: 3rem;
     color: #fff;
    
+}
+.calc-screen .previous-operand {
+    
+    font-size: 1.5rem;
+}
+
+.calc-screen .current-operand {
+    
+    font-size: 2.5rem;
 }
